# photoneo-csharp-examples

./: README.md
PhoXiAPI/AutonomousMaintenance/: CMakeLists.txt  Program.cs
PhoXiAPI/ChangeColorSettings/: CMakeLists.txt  Program.cs
PhoXiAPI/ChangeProfile/: CMakeLists.txt  Program.cs
PhoXiAPI/ChangeSettings/: CMakeLists.txt  Program.cs
PhoXiAPI/ConnectAndGrab/: CMakeLists.txt  Program.cs
PhoXiAPI/FullAPI/: CMakeLists.txt  Program.cs
PhoXiAPI/MaintenanceCommands/: CMakeLists.txt  Program.cs
PhoXiAPI/MotionCamChangeSettings/: CMakeLists.txt  Program.cs
PhoXiAPI/PTPTime/: CMakeLists.txt  Program.cs
PhoXiAPI/PointCloudCalculation/: CMakeLists.txt  Program.cs
PhoXiAPI/Recording/: CMakeLists.txt  Program.cs  ReadMe.txt
PhoXiAPI/TwoScannersMultithread/: CMakeLists.txt  Program.cs
PhoXiAPI/WinForms/: ReadMe.txt  WinFormsMsvc12.csproj.in  WinFormsMsvc14.csproj.in
PhoXiAPI/WinForms/WinForms/: FormMain.Designer.cs  FormMain.cs  Program.cs  WinFormsNoCMake.csproj
PhoXiAPI/WinForms/WinForms/Properties/: Settings.Designer.cs
PhoXiAPI/WinForms/src/WinForms/Properties/: Resources.Designer.cs
PhoXiAPI/WinForms/vc120/WinForms/: FormMain.cs  WinFormsNoCMake.csproj
PhoXiAPI/WinForms/vc140/WinForms/: WinFormsNoCMake.csproj
